# zhoudao

./: .gitignore  README.md  pyproject.toml
ai/: ZHOUDAO-AI-QUICKSTART.md  ZHOUDAO-DIAGNOSTIC-CODES.json  ZHOUDAO-LANGUAGE-CONTRACT.md  ZHOUDAO-SUPPORTED-SUBSET.json  ZHOUDAO-SURFACE-GRAMMAR.json
docs/: AMBIGUITY-CONSTITUTION.md  CONTEXTUAL-KEYWORDS.md  EXPRESSION-ACCESS-SEED-004.md  EXPRESSION-PRECEDENCE.md  IDENTIFIER-SPEC.md  IMPLEMENTATION-REALITY-013.md  LANGUAGE-CONSTITUTION-1.0.md  NAME-RESOLUTION.md  PUNCTUATION-SCOPE.md  PYTHON-ENVIRONMENT-RESOLUTION.md  PYTHON-METADATA-POLICY.md  SURFACE-GRAMMAR-INDEX.md  TOOLCHAIN-CACHE.md
examples/: counter.zd  grade.zd  square.zd
scripts/: 提取语法索引.py
spec/: ACCEPTANCE-0105-A.md  ACCEPTANCE-0105.md  EXPRESSION-IMPLEMENTATION-v2.md.SUPERSEDED  EXPRESSION-IMPLEMENTATION-v3.md  EXPRESSION-LAYER-RULING-010.5.md  EXPRESSION-TEST-IMPACT-0105.md  IMPLEMENTATION-REALITY-MAP-0105.md  OPERATOR-BOUNDARY-AUDIT.md  REFERENCE-AND-QUANTIFICATION-AUDIT-0105.md  SURFACE-PRESERVATION-MODEL-0105.md  ZHOUDAO-LANGUAGE-SPEC-1.0.md  ZHOUDAO-SEED-0105-FREEZE.md  keywords.json  precedence.json  punctuation.json  tokens.json  zhoudao.ebnf
tests/: test_003_context_resolver.py  test_003_corpus.py  test_003_exact_identifier.py  test_003_name_tables.py  test_012_coverage.py  test_012_method_aliases.py  test_013_R1_red_tests.py  test_013_d2_consumption.py  test_013_module_chain.py  test_013_punctuation.py  test_013_reference_map.py  test_013_traceback_frames.py  test_acceptance_002.py  test_action_domain_red.py  test_ast_backend.py  test_seed_004.py  (+10 more)
(+99 files in other folders)
