[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zhoudao"
version = "0.0.10rc1"
description = "中文句法式 Python 方言 —— 用中文写 Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "juemin4-source"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
  "Natural Language :: Chinese (Simplified)",
]

[project.urls]
Homepage = "https://github.com/juemin4-source/zhoudao"
Repository = "https://github.com/juemin4-source/zhoudao"

[tool.setuptools.packages.find]
include = ["周道*"]
